Disable profile comments deletion
* we don't have profile comments on our server

--- a/templates/edituser.html
+++ b/templates/edituser.html
@@ -200,10 +200,10 @@
             <a href="/donorremove/{{ UserData['Id'] }}" class="btn btn-warning">Remove Donor</a>
             {% endif %}
         </div>
-        <div class="buttons">
+        <!-- <div class="buttons">
             <a href="/actions/comment/profile/{{ UserData['Id'] }}" class="btn btn-danger">Delete all comments on this user's profile</a>
             <a href="/actions/comment/user/{{ UserData['Id'] }}" class="btn btn-danger">Delete all comments made by this user</a>
-        </div>
+        </div> -->
         <div class="buttons">
             <a href="/actions/freeze/{{ UserData['Id'] }}" class="btn btn-danger">Freeze/Unfreeze</a>
             <a href="/actions/hwid/{{ UserData['Id'] }}" class="btn btn-danger" id="hwid">Clear HWID</a>
