Disable account freezing
* there is no account freezing on our server

--- a/templates/edituser.html
+++ b/templates/edituser.html
@@ -205,7 +205,7 @@
             <a href="/actions/comment/user/{{ UserData['Id'] }}" class="btn btn-danger">Delete all comments made by this user</a>
         </div> -->
         <div class="buttons">
-            <a href="/actions/freeze/{{ UserData['Id'] }}" class="btn btn-danger">Freeze/Unfreeze</a>
+            <!-- <a href="/actions/freeze/{{ UserData['Id'] }}" class="btn btn-danger">Freeze/Unfreeze</a> -->
             <a href="/actions/hwid/{{ UserData['Id'] }}" class="btn btn-danger" id="hwid">Clear HWID</a>
             <a href="/action/confirm/delete/{{ UserData['Id'] }}" class="btn btn-danger", id="delete">Delete Account</a>
             <a href="/actions/kick/{{ UserData['Id'] }}" class="btn btn-warning" id="kick">Kick User</a>
