--- a/templates/wipeuser.html
+++ b/templates/wipeuser.html
@@ -3,13 +3,27 @@
 <h2 class="section-title">Wipe Account</h2>
 <div class="card">
     <div class="card-header">
+        <h4>Current account status</h4>
+    </div>
+    <div class="card-body">
+        <p>Current wipes: <b>{{ wipes }}</b></p>
+    </div>
+    <div class="card-header">
         <h4>Wipe Account</h4>
     </div>
     <div class="card-body">
-        <form ction="/user/wipe/{{ UserData['Id'] }}" method="post">
+        <form method="post">
+            <div class="form-group">
+                <label>Modes to wipe</label>
+                <select name="modes_to_wipe" class="form-control" id="modes_to_wipe">
+                    <option value="all">Both Modes</option>
+                    <option value="rx">Relax</option>
+                    <option value="vn">Vanilla</option>
+                </select>
+            </div>
             <div class="form-group">
                 <label>Wipe Reason</label>
-                <textarea class="form-control" id="wipe_reason">{{ UserData["WipeReason"] }}</textarea>
+                <textarea class="form-control" name="wipe_reason"></textarea>
             </div>
             <div class="buttons">
                 <button class="btn btn-success" type="submit" name="">Apply!</button>
