Restrict user when 3 wipes
Finishing up

--- a/templates/wipelogs.html
+++ b/templates/wipelogs.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h2 class="section-title">Wipe Logs</h2>
-<p class="section-lead">History of wipes given to this user</p>
+<p class="section-lead">Last 10 wipes given to this user</p>
 {% for log in Logs %}
 <div class="card">
     <div class="card-header">
